# joplin-planner

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  main_oldtyper.py  pyproject.toml
src/: month_planner.py  week_planner.py
